--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #d0e7ff; /* Light blue background */
+    background-color: #40E0D0; /* Light blue background */
 }
 
 header {
