--- a/styles.css
+++ b/styles.css
@@ -60,7 +60,7 @@ main {
 
 .admin-section button {
     padding: 10px;
-    background-color: #A020F0; /* Dark blue button */
+    background-color: #90EE90; /* Dark blue button */
     color: white;
     border: none;
     border-radius: 5px;
