--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #7ED3D6; /* Light blue background */
+    background-color: #003366; /* Light blue background */
 }
 
 header {
