--- a/views/index.ejs
+++ b/views/index.ejs
@@ -89,7 +89,8 @@
     <footer>
         <div class="profile">
             <img src="kibry.jpg" alt="Profile Photo" class="profile-photo">
-            <a href="https://wa.me/254789504437" target="_blank">WhatsApp</a>
+            <a href="https://wa.me/254789504437?text=Hello%20Logan%F0%9F%98%8A" target="_blank">WhatsApp</a>
+<a href="http://mailto:kibryf@gmail.com?subject=Hello" target="_blank">Gmail</a>
         </div>
         <p>&copy; 2023 Logan Wallpaper Gallery</p>
     </footer>
@@ -106,9 +107,9 @@
 
             if (username === adminUsername && password === adminPassword) {
                 document.getElementById("upload-section").style.display = "block";
-                alert("Login successful! You can now upload photos.");
+                alert("LOGIN SUCCESSFUL.");
             } else {
-                alert("Invalid username or password.");
+                alert("WRONG!!! YOU ARE NOT THE ADMIN!!");
             }
         });
 
