--- a/views/index.ejs
+++ b/views/index.ejs
@@ -89,8 +89,7 @@
     <footer>
         <div class="profile">
             <img src="kibry.jpg" alt="Profile Photo" class="profile-photo">
-            <a href="https://wa.me/254789504437?text=Hello%20Logan%F0%9F%98%8A" target="_blank">WhatsApp</a>
-<a href="http://mailto:kibryf@gmail.com?subject=Hello" target="_blank">Gmail</a>
+            <a href="https://wa.me/254789504437?" target="_blank">WhatsApp</a>
         </div>
         <p>&copy; 2023 Logan Wallpaper Gallery</p>
     </footer>
@@ -107,7 +106,7 @@
 
             if (username === adminUsername && password === adminPassword) {
                 document.getElementById("upload-section").style.display = "block";
-                alert("LOGIN SUCCESSFUL.");
+                alert("LOGIN SUCCESSFUL, YOU CAN NOW UPLOAD THE WALLPAPERS.");
             } else {
                 alert("WRONG!!! YOU ARE NOT THE ADMIN!!");
             }
