--- a/views/index.ejs
+++ b/views/index.ejs
@@ -108,7 +108,7 @@
                 document.getElementById("upload-section").style.display = "block";
                 alert("LOGIN SUCCESSFUL, YOU CAN NOW UPLOAD THE WALLPAPERS.");
             } else {
-                alert("WRONG!!! YOU ARE NOT THE ADMIN!!");
+                alert("WRONG!!! YOU ARE NOT THE ADMIN!!!");
             }
         });
 
